<?xml version="1.0" encoding="utf-8"?>
<layout>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.login.LoginActivity">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="68dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.53"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phone_num_view"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="68dp"
            android:hint="@string/email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phone_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_view"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="68dp"
            android:hint="@string/password"
            app:layout_constraintEnd_toEndOf="@id/phone_num_view"
            app:layout_constraintStart_toStartOf="@id/phone_num_view"
            app:layout_constraintTop_toBottomOf="@+id/phone_num_view">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_tv"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/sign_in_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/sign_in"
            app:layout_constraintEnd_toEndOf="@id/password_view"
            app:layout_constraintHorizontal_bias="0.493"
            app:layout_constraintStart_toStartOf="@id/password_view"
            app:layout_constraintTop_toBottomOf="@+id/password_view" />

        <TextView
            android:id="@+id/sign_up_message"
            android:text="@string/don_t_have_an_account_create_account_here"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="@id/sign_in_btn"
            app:layout_constraintHorizontal_bias="0.493"
            app:layout_constraintStart_toStartOf="@id/sign_in_btn"
            app:layout_constraintTop_toBottomOf="@+id/sign_in_btn"/>

        <Button
            android:id="@+id/sign_up_doc_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_as_doctor"
            android:textSize="15sp"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            app:layout_constraintEnd_toStartOf="@id/sign_up_pat_btn"
            app:layout_constraintStart_toStartOf="@id/sign_up_message"
            app:layout_constraintTop_toBottomOf="@+id/sign_up_message"
            />
        <Button
            android:id="@+id/sign_up_pat_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_as_patient"
            android:textSize="15sp"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            app:layout_constraintEnd_toEndOf="@id/sign_up_message"
            app:layout_constraintStart_toEndOf="@id/sign_up_doc_btn"
            app:layout_constraintTop_toBottomOf="@+id/sign_up_message"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>