<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.login.SignUpDoctorActivity">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/full_name_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:hint="@string/full_name"
            app:layout_constraintBottom_toTopOf="@+id/email_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/full_name_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:hint="@string/email"
            app:layout_constraintBottom_toTopOf="@+id/password_view"
            app:layout_constraintEnd_toEndOf="@id/full_name_view"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@id/full_name_view"
            app:layout_constraintTop_toBottomOf="@+id/full_name_view">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phone_num_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:hint="@string/phone_number"
            app:layout_constraintBottom_toTopOf="@+id/address_view"
            app:layout_constraintEnd_toEndOf="@id/email_view"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@id/email_view"
            app:layout_constraintTop_toBottomOf="@+id/password_view">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phone_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:hint="@string/password"
            app:layout_constraintBottom_toTopOf="@+id/phone_num_view"
            app:layout_constraintEnd_toEndOf="@id/phone_num_view"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@id/phone_num_view"
            app:layout_constraintTop_toBottomOf="@+id/email_view">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/address_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:hint="@string/address"
            app:layout_constraintBottom_toTopOf="@+id/education_stat_view"
            app:layout_constraintEnd_toEndOf="@id/phone_num_view"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@id/phone_num_view"
            app:layout_constraintTop_toBottomOf="@+id/phone_num_view">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/address_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/education_stat_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:hint="@string/education_status"
            app:layout_constraintBottom_toTopOf="@+id/proff_stat_view"
            app:layout_constraintEnd_toEndOf="@id/address_view"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@id/address_view"
            app:layout_constraintTop_toBottomOf="@+id/address_view">

            <AutoCompleteTextView
                android:id="@+id/education_stat_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/proff_stat_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:hint="@string/profession"
            app:layout_constraintBottom_toTopOf="@+id/spec_stat_view"
            app:layout_constraintEnd_toEndOf="@id/education_stat_view"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@id/education_stat_view"
            app:layout_constraintTop_toBottomOf="@+id/education_stat_view">

            <AutoCompleteTextView
                android:id="@+id/proff_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/spec_stat_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:hint="@string/specialization"
            app:layout_constraintBottom_toTopOf="@+id/sign_up_doc_btn"
            app:layout_constraintEnd_toEndOf="@id/proff_stat_view"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@id/proff_stat_view"
            app:layout_constraintTop_toBottomOf="@+id/proff_stat_view">

            <AutoCompleteTextView
                android:id="@+id/specialization_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/sign_up_doc_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Finish"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spec_stat_view" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>